# micro-url

./: .gitignore  .prettierignore  Cargo.toml  README.md  Secrets.example.toml  VERSION.toml  audit.toml  cog.toml  deny.toml  eslint.config.js  justfile  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yaml  ci-cli.yaml  ci-entity.yaml  ci-frontend.yaml  ci-migration.yaml  ci-rust.yaml  ci-server.yaml  ci.yaml  ci.yml
.husky/: pre-commit
apps/micro_url/: Cargo.toml  project.json  sonar-project.properties
apps/micro_url/src/: main.rs
apps/server/: Cargo.toml  project.json  sonar-project.properties
apps/server/src/: api.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  state.rs  structs.rs  urls.rs  user.rs  utils.rs
apps/server/src/actor/: actor.rs  mod.rs  msgs.rs  pool.rs  tasks.rs
apps/server/src/urls/: mod.rs  routes.rs  structs.rs
apps/server/src/user/: local.rs  mod.rs  oidc.rs  routes.rs  structs.rs
js/api/: .parcelrc  jest.config.ts  justfile  package.json  tsconfig.json
js/api/src/: index.test.ts  index.ts  result.test.ts  result.ts  routes.test.ts  routes.ts  types.ts  utils.ts
js/api/src/types/: AuthUrl.ts  AuthUrls.ts  BasicError.ts  NewUrlResponse.ts  NewUserRequest.ts  OidcNameResponse.ts  Paginate.ts  QrCodeParams.ts  Sessions.ts  UserLink.ts  UserLinksAndViews.ts  UserView.ts
js/frontend/: astro.config.mjs  package.json  sonar-project.properties
js/frontend/src/components/: NewUrlForm.tsx
js/frontend/src/components/NewUrlForm/: NewUrlForm.tsx  NewUrlFormContainer.tsx  NewUrlFormSchema.ts  index.ts
js/frontend/src/components/SignInForm/: SignInForm.tsx  SignInFormContainer.tsx  SignInFormSchema.ts  index.ts
js/frontend/src/components/SignUpForm/: SignUpForm.tsx  SignUpFormContainer.tsx  SignUpFormSchema.ts  index.ts
js/frontend/src/components/User/: UrlsTable.astro
js/frontend/src/components/shared/: Footer.tsx  Form.tsx  Header.tsx  Page.tsx  SafeLink.astro
js/frontend/src/components/shared/SignInForm/: email_field.tsx  password_field.tsx  sign_in_schema.ts
js/frontend/src/components/ui/: textarea.tsx
js/frontend/src/constants/: pages.ts
js/frontend/src/helpers/: index.ts  localStorageHelper.ts  toastHelper.ts
js/frontend/src/layouts/: Layout.astro  Main.astro  Page.astro
js/frontend/src/lib/api/: index.ts  routes.ts  url.ts  users.ts
js/frontend/src/lib/types/: AuthUrl.ts  AuthUrls.ts  BasicError.ts  BasicResponse.ts  DeleteUrlResponse.ts  GetExistingUrlError.ts  GetUrlInfoResponse.ts  GetUrlResponse.ts  HeaderMapDef.ts  ImageFormats.ts  LoginRequest.ts  LoginResponseType.ts  LogoutResponseType.ts  NewUrlRequest.ts  NewUrlResponse.ts  NewUserRequest.ts  NewUserResponse.ts  OidcCallbackResponseType.ts  OidcName.ts  OidcNameResponse.ts  Paginate.ts  QrCodeParams.ts  QrCodeResponse.ts  Sessions.ts  ShortLink.ts  UpdateUrlResponse.ts  User.ts  UserLink.ts  UserLinkWithViews.ts  UserLinks.ts  UserLinksAndViews.ts  UserLinksResponse.ts  UserPass.ts  UserProfile.ts  UserProfileResponse.ts  UserView.ts  Views.ts  index.ts
js/frontend/src/pages/: index.astro  sign_in.astro  sign_up.astro  user.astro
js/frontend/src/types/: pages.ts
kanidm/: ca.pem  cakey.pem  cert.pem  chain.pem  kanidm.db  kanidm.db-shm  kanidm.db-wal  key.pem  server.toml
libs/entity/: Cargo.toml  project.json  sonar-project.properties
libs/entity/bindings/: Views.ts
libs/entity/src/: lib.rs  location.rs  prelude.rs  sessions.rs  short_link.rs  user.rs  user_pass.rs  views.rs
libs/migration/: Cargo.toml  project.json  sonar-project.properties
libs/migration/src/: lib.rs  m20250325_204952_init.rs  table_types.rs
patches/: utoipa-swagger-ui+9.0.0.patch
