[workspace]
resolver = '2'
members = ['apps/server', 'libs/migration', 'libs/entity', 'apps/micro_url']

[workspace.dependencies]
axum = { version = "0.8", features = [
	'macros',
	'http1',
	'http2',
	'json',
	'multipart',
	'tracing',
	'form',
	'query',
] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5.3", features = [
	"axum_extras",
	"auto_into_responses",
	"chrono",
	"config",
	"debug",
	"indexmap",
	"openapi_extensions",
	"preserve_order",
	"preserve_path_order",
	"rc_schema",
	"ulid",
	"url",
	"uuid",
] }
utoipa-axum = { version = "0.2", features = ["debug"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "debug", "reqwest"] }
ts-rs = { version = '10', features = [
	'serde-compat',
	'chrono-impl',
	'bigdecimal-impl',
	'uuid-impl',
	'url-impl',
	'format',
	'serde-json-impl',
	'tokio-impl',
] }

sea-orm = { version = '1.1.7', features = [
	'runtime-tokio-native-tls',
	'sqlx-postgres',
	'debug-print',
	'macros',
	'with-chrono',
	'with-json',
	'with-uuid',
	'postgres-array',
] }
sea-query = '0'
uuid = { version = '1.16.0', features = ['fast-rng'] }
async-std = { version = '1', features = ['attributes', 'tokio1'] }
serde = { version = '1', features = ['serde_derive', 'derive'] }
chrono = { version = '0.4', features = ['clock'] }
serde_json = '1'

[profile.release]
lto = true

[patch.crates-io]
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", rev = "ca6b2a5" }
utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "ca6b2a5" }
utoipa-axum = { git = "https://github.com/juhaku/utoipa.git", rev = "ca6b2a5" }
