[package]
name = "micro_url"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio.workspace = true
server = { path = "../../apps/server" }
clap = { version = "4.5.38", features = [
  "unicode",
  "string",
  "env",
  "derive",
  "debug",
] }
toml = "0.8.22"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
