[package]
name = "micro_url"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
tokio.workspace = true
server = { path = "../../apps/server" }
clap = { version = "4.5.41", features = [
  "unicode",
  "string",
  "env",
  "derive",
  "debug",
] }
toml = "0.9.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
