[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../../libs/migration" }
entity = { path = "../../libs/entity" }
sea-query.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sea-orm.workspace = true
serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
uuid.workspace = true
lru = "0.13.0"
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.19", features = [
  "chrono",
  "env-filter",
  "local-time",
  "json",
  "serde_json",
  "serde",
] }
dotenvy = "0.15.7"

[features]
test = ["sea-orm/mock"]
