[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../../libs/migration" }
entity = { path = "../../libs/entity" }
sea-query.workspace = true
sea-orm.workspace = true
serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
axum = { version = '0.8', features = [
  'macros',
  'http1',
  'http2',
  'json',
  'multipart',
  'tracing',
  'form',
  'query',
] }
tower = { version = '0.5.2', features = ['full'] }
tower-http = { version = '0.6.2', features = ['full', 'trace'] }
shuttle-axum = { version = "0.53.0", default-features = false, features = [
  "axum",
] }
shuttle-runtime = { version = "0.53.0", features = [
  "tracing-subscriber",
  "api-client-tracing",
] }
shuttle-shared-db = { version = "0.53.0", features = [
  "postgres",
  "sqlx",
  "sqlx-native-tls",
] }
lru = "0.13.0"
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.19", features = [
  "chrono",
  "env-filter",
  "local-time",
  "json",
  "serde_json",
  "serde",
] }
dotenvy = "0.15.7"
axum-extra = { version = "0.10.1", features = ["cookie-private", "cookie"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["native-tls"] }
sqlx = "0.8.3"
url = { version = "2.5.4", features = ["serde"] }
time = "0.3.41"
openidconnect = { version = "4", features = ["native-tls", "reqwest"] }
argon2 = { version = "0.5", features = ["std"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "auto_into_responses", "chrono", "config", "debug", "indexmap", "openapi_extensions", "preserve_order", "preserve_path_order", "rc_schema", "ulid", "url", "uuid"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }

[features]
test = ["sea-orm/mock"]
