[package]
name = "entity"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
async-std.workspace = true
sea-orm.workspace = true
serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
typeshare.workspace = true
