[package]
name = "entity"
version = "0.1.0"
edition = "2024"
publish = false
license = "AGPL-3.0-or-later"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
utoipa.workspace = true
ts-rs.workspace = true
